# aai-data-explorer

./: .gitignore  README.md  deno.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.claude/skills/e2e-report/: SKILL.md  build_report.py
.claude/skills/e2e-screenshot-report/: SKILL.md  capture.py
.github/workflows/: ci.yml
backend/: alembic.ini  connect.ts  main.ts  pyproject.toml
backend/queryview/: clickhouse.py  connect.py  dashboard_queries.py  dashboards.py  main.py  mcp_server.py  queries.py  remote.py
backend/queryview/migrations/: env.py
backend/queryview/migrations/versions/: 9a536b7c0328_initial_schema.py
backend/tests/: test_dashboards.py  test_migrations.py
docs/: api.md  connect.md  dashboard.md  future.md  query.md  queryview.md  remote.md
docs/superpowers/specs/: 2026-05-25-playwright-python-e2e-design.md  2026-05-27-mcp-push-to-ui-design.md  2026-05-29-dashboard-view-design.md  2026-06-03-alembic-migrations-lifecycle-design.md  2026-06-12-default-views-array-map-tuple-design.md
e2e/: app.spec.ts  conftest.py  test_app.py  test_dashboard.py  test_query.py  test_remote.py
e2e/tests/: app.test.ts
frontend/: index.html  package.json
frontend/src/: App.tsx  ComplexCell.tsx  DashboardView.tsx  QueryView.tsx  cellView.test.ts  cellView.ts  complexCell.test.ts  complexCell.ts  queryParams.test.ts  queryParams.ts
scripts/: browser_local.sh  setup.sh  setup_browser.sh
