[project]
name = "queryview-backend"
version = "0.1.0"
description = "QueryView backend: FastAPI + SQLModel API over the ClickHouse HTTP interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "cryptography>=42",
    "aiosqlite>=0.22.1",
    "mcp>=1.9",
]

[project.scripts]
queryview-backend = "queryview.main:run"

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-playwright>=0.7",
    "pytest-html>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["e2e"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/queryview"]
