[project]
name = "queryview-backend"
version = "0.1.0"
description = "QueryView backend: FastAPI + SQLModel API over the ClickHouse HTTP interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "cryptography>=42",
]

[project.scripts]
queryview-backend = "queryview.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["queryview"]
